recording day three struggles
trying humble-ui

the documentation is not well organised

trouble putting something on screen using ai slop